fixed the images

--- a/index.html
+++ b/index.html
@@ -123,28 +123,28 @@
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/1.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/1.JPG">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/2.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/2.JPG">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/3.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/3.JPG">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
                                 <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/4.jpg">
+                                    <img class="img-portfolio img-responsive" src="img/4.JPG">
                                 </a>
                             </div>
                         </div>
